--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react-dom": "^16.8.2",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
