--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
   "devDependencies": {
     "typescript": "^3.3.3333"
   },
-  "proxy": "http://localhost:4567/api"
+  "proxy": "http://localhost:4567"
   
 }
