--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "http-proxy-middleware": "^0.19.1",
     "typescript": "^3.3.3333"
   },
-  //"proxy": "http://localhost:19268"
+  "proxy": "http://127.0.0.1:8000"
 }
