--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "last 2 Chrome versions",
+    "last 2 Firefox versions"
   ],
   "devDependencies": {
     "http-proxy-middleware": "^0.19.1",
