--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
   "devDependencies": {
     "http-proxy-middleware": "^0.19.1"
   },
-  "proxy": "https://nano-twitter-2019.herokuapp.com"
+  "proxy": "http://localhost:8000"
 }
